--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
     "description": "An advanced MQTT-based Node.js application",
     "main": "src/index.js",
     "scripts": {
-      "start": "node src/index.js",
-      "test": "jest"
+        "start-cli": "node src/index.js",
+        "start-web": "node src/server.js",
+        "test": "jest"
     },
     "dependencies": {
-      "mqtt": "^5.0.0",
-      "dotenv": "^16.0.0",
-      "winston": "^3.8.0"
+        "dotenv": "^16.0.0",
+        "express": "^4.21.2",
+        "mqtt": "^5.10.3",
+        "winston": "^3.8.0"
     },
     "devDependencies": {
-      "jest": "^29.0.0"
+        "jest": "^29.0.0"
     }
-  }
-  
+}
